--- a/src/components/DepositForm/DepositForm.css
+++ b/src/components/DepositForm/DepositForm.css
@@ -11,7 +11,7 @@
   color: #2c3e50;
 }
 
-/* Reuse form-group styles from GoalForm */
+/* Here i reused form-group styles from GoalForm */
 .deposit-form .form-group {
   margin-bottom: 1rem;
 }
